--- a/appinfo.json
+++ b/appinfo.json
@@ -16,7 +16,7 @@
       {
         "type": "png",
         "name": "IMAGE_BULLETIN",
-        "file": "images/bulletinbw.png"
+        "file": "images/Pebble.png"
       }
     ]
   }
